kube/components/open-metadata/openmetadata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmetadata
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openmetadata
    spec:
      containers:
        - name: openmetadata
          image: docker.getcollate.io/openmetadata/server:1.0.1
          ports:
            - containerPort: 8585
            - containerPort: 8586
          resources: {}
      restartPolicy: Always
#status: {}
