kube/components/open-metadata/openmetadata-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmetadata
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openmetadata
    spec:
      containers:
        - name: openmetadata
          image: vjain143/open-metadata:1.0.1
          ports:
            - containerPort: 8585
            - containerPort: 8586
          command: [ "/bin/sh", "-c" ]
          args:
            - |
              sleep infinity
          resources: {}
      restartPolicy: Always
#status: {}
