kube/components/open-metadata/openmetadata-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmetadata-server
  labels:
    app: openmetadata-server
spec:
  type: NodePort
  ports:
    #- name: "8585"
    #  port: 8585
    #  nodePort: 30585
    #  targetPort: 8585
    #  protocol: TCP
    #- name: "8586"
    #  port: 8586
    #  nodePort: 30586
    #  targetPort: 8586
    #  protocol: TCP
    #- name: "5005"
    #  port: 5005
    #  nodePort: 30005
    #  targetPort: 5005
    #  protocol: TCP
    - name: 8585-tcp
      port: 8585
      nodePort: 30585
      targetPort: 8585
      protocol: TCP
    - name: 8586-tcp
      port: 8586
      nodePort: 30586
      targetPort: 8586
      protocol: TCP
    - name: 5005-tcp
      port: 5005
      nodePort: 30005
      targetPort: 5005
      protocol: TCP
  selector:
    app: openmetadata-server
