kube/components/open-metadata/openmetadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmetadata
  labels:
    app: openmetadata
spec:
  type: NodePort
  ports:
    - name: "8585"
      port: 8585
      targetPort: 8585
    - name: "8586"
      port: 8586
      targetPort: 8586
  selector:
    app: openmetadata
